--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@ params:
   summary:
     position: hero
   search:
-    active: true
+    active: false
   logo:
-    header: ''
+    header: '/assets/images/logo_color.PNG'
     footer: ''
